--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>David Ferreira - Advocacia e Assessoria Jurídica</title>
+    <title>Flávio Barros - Advocacia e Assessoria Jurídica</title>
   </head>
   <body>
     <div id="root"></div>
